mochad-0.1.17

    * Fix for Linux distros using systemd-udev such as Raspbian 4.4.
    * Fix for newer versions of autotools.

mochad-0.1.16

    * Fix "Could not find endpoints" problem.

mochad-0.1.15

    * Add support for newer CM19A built in 2011 or later.

mochad-0.1.14

    * Fix OpenRemote too many open sockets problem. This result in delayed
    responses to button presses.
    * Add extended_code_1 command. This can be used to send shutters/blinds
    control commands.

mochad-0.1.13

    * Fix -d debug command line option.

    * The SP554A motion sensor with the switch in the home/away position is
    now correctly decoded.

    * Add exit to potential infinite loops.

    * Add message for DS12A with cover off (tamper). The DS12A looks like
    two DS10As with the cover on.


mochad-0.1.12

    * Add --raw-data option from Marc Merlin. Programs such as MisterHouse
    can decode the raw RF data.

mochad-0.1.11

    * Fix xdim (extended dim) that only worked for unit code 3.

mochad-0.1.10

    * Fix major client socket problem. Commands from clients stopped working.

mochad-0.1.9

    * Add commands getstatus and getstatussec.
    getstatus <HU>          -- Get device HU on/off status
    getstatus <HU> xdim     -- Get device xdim status
    getstatusec <RFSECAddr> -- Get RF security device status such as DS10A.

    * Add port 1101 for OpenRemote 2.0. This is similar to port 1099 but does
    not include unsolicited event messages. OR polls for device events using
    getstatus and getstatussec.

mochad-0.1.8

    * Add support for X10 KR15A Big Red Button.
    * Allow '\r' as well as '\n' for line termination
    * Add more support for Flash XMLSocket clients including cross domain
    policy request and response for Chumby widgets. This is required to allow
    a Chumby widget to talk to mochad through an XMLSocket. Chumby widget
    should be released real soon now.
    * Add python-tk demo GUI application. Supports on and off buttons plus